--- a/src/components/ProfilePicture/ProfilePicture.module.css
+++ b/src/components/ProfilePicture/ProfilePicture.module.css
@@ -1,4 +1,3 @@
 .profilePicture {
-	aspect-ratio: 1/1;
 	border-radius: 100%;
 }
